tests/ui/fail_format_specifier.stderr
error: invalid template literal
 --> tests/ui/fail_format_specifier.rs:3:12
  |
3 |     value: "Hello {name:?}",
  |            ^^^^^^^^^^^^^^^^
