tests/ui/fail_format_specifier.rs
rusty18n::define_i18n_fallback! {
    FailFormatSpecifier => en
    value: "Hello {name:?}",
}

fn main() {}
